--- a/.github/workflows/pushWatcher.yml
+++ b/.github/workflows/pushWatcher.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: call API
-        uses: ./.github/workflows/pushWatcher
+        uses: fjogeleit/http-request-action@v1
         with:
           url: 'https://localhost:3000/githubWatcher'
           method: 'POST'
