--- a/.github/workflows/pushWatcher.yml
+++ b/.github/workflows/pushWatcher.yml
@@ -6,9 +6,12 @@ jobs:
   deployment:
     runs-on: ubuntu-latest
     steps:
-      - name: call API
-        uses: fjogeleit/http-request-action@v1
+      - uses: actions/checkout@v2
+      - name: Call API
+        id: myRequest
+        uses: fjogeleit/http-request-action@master
         with:
           url: 'https://15.165.77.33:3000/githubWatcher'
           method: 'POST'
+          customHeaders: '{"Content-Type": "application/json"}'
           data: '{"caller": "pushWatcher"}'
