--- a/.github/workflows/pushWatcher.yml
+++ b/.github/workflows/pushWatcher.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Call API
         id: myRequest
-        uses: fjogeleit/http-request-action@master
+        uses: fjogeleit/http-request-action@main
         with:
           url: 'https://15.165.77.33:3000/githubWatcher'
           method: 'POST'
