--- a/.github/workflows/pushWatcher.yml
+++ b/.github/workflows/pushWatcher.yml
@@ -1,6 +1,8 @@
 on:
   push:
     branches: [seunghee-test]
+env:
+  env_var: ${{ vars.ENV_CONTEXT_VAR }}
 
 jobs:
   deployment:
@@ -14,4 +16,4 @@ jobs:
           url: 'http://15.165.77.33:3000/githubWatcher'
           method: 'POST'
           customHeaders: '{"Content-Type": "application/json"}'
-          data: '{"caller": "pushWatcher"}'
+          data: '{"branch": ${GITHUB_REF##*/}}'
