--- a/.github/workflows/pushWatcher.yml
+++ b/.github/workflows/pushWatcher.yml
@@ -13,4 +13,4 @@ jobs:
           url: 'http://15.165.77.33:3000/githubWatcher'
           method: 'POST'
           customHeaders: '{"Content-Type": "application/json"}'
-          data: '{"branch": ${{ github.head_ref }}}'
+          data: '{"branch": ${{ github.head_ref }}, "sha": ${{ github.sha }}, "actor": ${{ github.actor }}}'
