--- a/.github/workflows/pushWatcher.yml
+++ b/.github/workflows/pushWatcher.yml
@@ -16,4 +16,4 @@ jobs:
           url: 'http://15.165.77.33:3000/githubWatcher'
           method: 'POST'
           customHeaders: '{"Content-Type": "application/json"}'
-          data: '{"branch": ${BRANCH_NAME}}'
+          data: '{"branch": ${{ env.BRANCH_NAME }}}'
