--- a/.github/workflows/pushWatcher.yml
+++ b/.github/workflows/pushWatcher.yml
@@ -1,8 +1,6 @@
 on:
   push:
     branches: [seunghee-test]
-
-
 jobs:
   deployment:
     runs-on: ubuntu-latest
@@ -16,4 +14,4 @@ jobs:
         with:
           url: 'http://15.165.77.33:3000/githubWatcher'
           method: 'POST'
-          data: '{"branch": env.BRANCH_NAME, "sha": "sha"}'
+          data: '{"branch_name": ${{ github.head_ref}}}'
