--- a/.github/workflows/pushWatcher.yml
+++ b/.github/workflows/pushWatcher.yml
@@ -14,4 +14,7 @@ jobs:
         with:
           url: 'http://15.165.77.33:3000/githubWatcher'
           method: 'POST'
-          data: '{"branch_name": ${{ github.head_ref}}}'
+          data: '{"branch_name": "aaa"}'
+          run: |
+            echo ${{ github.head_ref }}
+            echo $BRANCH_NAME
