--- a/.github/workflows/pushWatcher.yml
+++ b/.github/workflows/pushWatcher.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           url: 'http://15.165.77.33:3000/githubWatcher'
           method: 'POST'
-          data: {branchName: ${BRANCH_NAME}}
+          data: {"branchName": ${BRANCH_NAME}}
       - name: check branch
         run: |
           echo $BRANCH_NAME
