--- a/.github/workflows/pushWatcher.yml
+++ b/.github/workflows/pushWatcher.yml
@@ -14,7 +14,10 @@ jobs:
         with:
           url: 'http://15.165.77.33:3000/githubWatcher'
           method: 'POST'
-          data: {"branchName": $BRANCH_NAME}
-      - name: check branch
-        run: |
-          echo $BRANCH_NAME
+          data: '{"name": "${{ env.BRANCH_NAME }}"}'
+      - name: Call API2
+        uses: satak/webrequest-action@master
+        with:
+          url: 'http://15.165.77.33:3000/githubWatcher'
+          method: POST
+          payload: '{"name": "${{ github.head_ref }}"}'
