--- a/.github/workflows/pushWatcher.yml
+++ b/.github/workflows/pushWatcher.yml
@@ -14,10 +14,4 @@ jobs:
         with:
           url: 'http://15.165.77.33:3000/githubWatcher'
           method: 'POST'
-          data: '{"name1": "${{ env.BRANCH_NAME }}"}'
-      - name: Call API2
-        uses: satak/webrequest-action@master
-        with:
-          url: 'http://15.165.77.33:3000/githubWatcher'
-          method: POST
-          payload: '{"name2": "${{ github.head_ref }}"}'
+          data: '{"branchName": "${{ env.BRANCH_NAME }}", "a":"b"}'
