--- a/.github/workflows/pushWatcher.yml
+++ b/.github/workflows/pushWatcher.yml
@@ -8,6 +8,7 @@ jobs:
       REPOSITORY: ${{ github.repository }}
       BRANCH: ${{ github.head_ref || github.ref_name }}
       SHA: ${{ github.sha }}
+      ACTOR: ${{ github.actor }}
     steps:
       - uses: actions/checkout@v3
       - name: Call API
@@ -16,4 +17,4 @@ jobs:
         with:
           url: 'http://15.165.77.33:3000/githubWatcher'
           method: 'POST'
-          data: '{"repository": "${{ env.REPOSITORY }}", "branch": "${{ env.BRANCH }}", "sha":"${{ env.SHA }}"}'
+          data: '{"repository": "${{ env.REPOSITORY }}", "branch": "${{ env.BRANCH }}", "sha":"${{ env.SHA }}", "actor":"${{ env.ACTOR }}"}'
