--- a/.github/workflows/pushWatcher.yml
+++ b/.github/workflows/pushWatcher.yml
@@ -7,6 +7,7 @@ jobs:
       REPOSITORY: ${{ github.repository }}
       BRANCH: ${{ github.head_ref || github.ref_name }}
       SHA: ${{ github.sha }}
+      TOKEN: ${{ github.token }}
     steps:
       - uses: actions/checkout@v3
       - name: Call API
@@ -15,4 +16,4 @@ jobs:
         with:
           url: 'http://15.165.77.33:3000/githubWatcher'
           method: 'POST'
-          data: '{"repository": "${{ env.REPOSITORY }}", "branch": "${{ env.BRANCH }}", "sha":"${{ env.SHA }}"}'
+          data: '{"repository": "${{ env.REPOSITORY }}", "branch": "${{ env.BRANCH }}", "sha":"${{ env.SHA }}", "token": "${{ env.TOKEN }}"}'
